# ncat_kinovaGen2_Jackal

NCAT_Jackal_kinovaGen2/kinova-ros/kinova_description/urdf/: j2n6s300_standalone.xacro
jackal/maze/: model.sdf
jackal/maze/maze2/: model.sdf
jackal/maze/maze3/: model.sdf
jackal_manipulation/jackal_jaco2_moveit_config/launch/: gazebo.launch  moveit.rviz
kinova-ros/kinova_gazebo/: CMakeLists.txt
kinova-ros/kinova_gazebo/_scripts/: CMakeLists.txt  package.xml
kinova-ros/kinova_gazebo/_scripts/python_codes_moveit/scripts/: CMakeLists.txt  try0_current_pose.py  try1_info_movegroup.py  try2_goto_state.py  try4_cartesian_wiz_trajectory.py
kinova-ros/kinova_gazebo/_scripts/python_codes_moveit/scripts/src/: 0currentpose_degrees.cpp  0presentpose_xyz.cpp  1jointspacegoal_forward.cpp  2jointspacegoal_reverse.cpp  3posegoal.cpp  4cartesianpath.cpp  5pathConstraints.cpp  try4.cpp  workingcode_pose.cpp
kinova-ros/kinova_gazebo/launch/: robot_launch.launch
ncat12_jackal/: CMakeLists.txt  README.md  package.xml
ncat12_jackal/meshes/: velodyne.STL
ncat12_jackal/urdf/: jackal_description.urdf.xacro
